tests/fail/evaler3.dit
A {
    String value;
    validator Python {{
        int(a)
    }}
}

A a;

a.value = 'test';